birthday wish changes

--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
         <span data-node-name="bigTextPart1">S</span>
         <span data-node-name="bigTextPart2">O</span>
       </p>
+      <canvas id="confetti-canvas" class="confetti-canvas"></canvas>
+      <div class="sparkles-container"></div>
+      <div class="celebration-text">
+        <span class="celebration-emoji">🎉</span>
+        <span class="celebration-emoji">✨</span>
+        <span class="celebration-emoji">🎊</span>
+        <span class="celebration-emoji">🌟</span>
+        <span class="celebration-emoji">🎈</span>
+      </div>
     </div>
     <div class="six">
       <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
@@ -88,6 +97,9 @@
         <img src="img/ballon2.svg" alt="">
         <img src="img/ballon1.svg" alt="">
         <img src="img/ballon3.svg" alt="">
+        <img src="img/ballon2.svg" alt="">
+        <img src="img/ballon1.svg" alt="">
+        <img src="img/ballon3.svg" alt="">
       </div>
     </div>
     <div class="eight">
@@ -123,8 +135,27 @@
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
+      <div class="scattered-photos">
+        <img src="img/image1.jpeg" alt="" class="scattered-photo photo-1" data-node-name="imagePath">
+        <img src="img/image2.jpeg" alt="" class="scattered-photo photo-2">
+        <img src="img/image3.jpeg" alt="" class="scattered-photo photo-3">
+        <img src="img/image4.jpeg" alt="" class="scattered-photo photo-4">
+        <img src="img/image5.jpeg" alt="" class="scattered-photo photo-5">
+        <img src="img/image6.jpeg" alt="" class="scattered-photo photo-6">
+        <img src="img/image7.jpeg" alt="" class="scattered-photo photo-7">
+      </div>
     </div>
   </div>
+  <div class="interactive-emojis">
+    <div class="interactive-emoji" data-emoji="🎉" title="Click for confetti!">🎉</div>
+    <div class="interactive-emoji" data-emoji="✨" title="Click for sparkles!">✨</div>
+    <div class="interactive-emoji" data-emoji="🎊" title="Click for party popper!">🎊</div>
+    <div class="interactive-emoji" data-emoji="🌟" title="Click for stars!">🌟</div>
+    <div class="interactive-emoji" data-emoji="🎈" title="Click for balloons!">🎈</div>
+  </div>
+  <div class="interactive-sparkles-container"></div>
+  <div class="interactive-balloons-container"></div>
+  <div class="interactive-stars-container"></div>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
