--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 </head>
 
 <body>
+  <button type="button" class="skip-button" id="skip" aria-label="Skip all animations and jump to the finale">
+    Skip to ending
+  </button>
   <div class="container">
     <div class="one">
       <h1 class="one">
         <span data-node-name="greeting">Hey</span>
-        <span data-node-name="name">Lydia</span>
+        <span data-node-name="name">Nayab</span>
       </h1>
       <p class="two" data-node-name="greetingText">I really like your name btw!</p>
     </div>
@@ -55,11 +58,11 @@
       </div>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/image8.jpeg" alt="" class="nayab-dp" data-node-name="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 data-node-name="wishText">May the best always be with you! ;)</h5>
       </div>
     </div>
     <div class="seven">
@@ -143,6 +146,7 @@
         <img src="img/image5.jpeg" alt="" class="scattered-photo photo-5">
         <img src="img/image6.jpeg" alt="" class="scattered-photo photo-6">
         <img src="img/image7.jpeg" alt="" class="scattered-photo photo-7">
+        <img src="img/image9.jpeg" alt="" class="scattered-photo photo-9">
       </div>
     </div>
   </div>
