--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+  <div class="mobile-blocker" id="mobile-blocker">
+    <div class="mobile-blocker-content">
+      <div class="mobile-blocker-icon">💻</div>
+      <h2>Please Open on Desktop</h2>
+      <p>This experience is best viewed on a desktop or laptop computer.</p>
+      <p>Please open this website on a desktop device to continue.</p>
+    </div>
+  </div>
   <button type="button" class="skip-button" id="skip" aria-label="Skip all animations and jump to the finale">
     Skip to ending
   </button>
@@ -160,6 +168,10 @@
   <div class="interactive-sparkles-container"></div>
   <div class="interactive-balloons-container"></div>
   <div class="interactive-stars-container"></div>
+  <audio id="birthday-audio" loop>
+    <source src="img/Nayab.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
